[gd_scene load_steps=21 format=2]

[ext_resource path="res://objects/save_point.gd" type="Script" id=1]
[ext_resource path="res://assets/Pipoya VFX TimeMagic/192x192/pipo-btleffect214_192.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.7344, 88.6394 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 192, 192 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 192, 192, 192 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 384, 192, 192 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 384, 192, 192 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 11.0
} ]

[sub_resource type="DynamicFont" id=14]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 35
font_data = ExtResource( 3 )

[node name="save_point" type="Area2D"]
pause_mode = 2
process_priority = -1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = -4
frames = SubResource( 13 )
frame = 7
playing = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.254902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.4
anchor_top = 0.557
anchor_right = 0.463
anchor_bottom = 0.629
margin_top = -0.0400391
margin_right = 0.359985
margin_bottom = 0.119995
custom_fonts/font = SubResource( 14 )
text = "Sim"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nao" type="Button" parent="CanvasLayer/Control"]
anchor_left = 0.526
anchor_top = 0.554
anchor_right = 0.588
anchor_bottom = 0.626
margin_left = 0.570435
margin_top = 0.119995
margin_right = 0.210449
margin_bottom = 0.279968
custom_fonts/font = SubResource( 15 )
text = "NÃ£o"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deseja_salvar" type="Label" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -35.5
margin_right = 151.0
margin_bottom = 35.5
custom_fonts/font = SubResource( 16 )
text = "Deseja Salvar o Jogo?"

[node name="jogo_salvo" type="Label" parent="CanvasLayer/Control"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.9547
margin_top = -252.724
margin_right = 68.0453
margin_bottom = -210.724
custom_fonts/font = SubResource( 17 )
text = "Jogo Salvo!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_save_point_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_save_point_body_exited"]
[connection signal="pressed" from="CanvasLayer/Control/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/nao" to="." method="_on_nao_pressed"]
